--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 
   <!-- غير الصورة المصغرة -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="https://i.imgur.com/Sv0exwz.jpg">
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
-  <title> غير هذا النص </title>
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص">
-  <meta property="og:title" content="غير هذا النص">
+  <title> Download Messenger</title>
+  <meta name="title" content="Download Messenger">
+  <meta property="twitter:title" content="Download Messenger">
+  <meta property="og:title" content="Download Messenger">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
@@ -44,7 +44,7 @@
   <script>
 
     const URL = "https://www.google.com"; // أدخل الرابط الخاص بك هنا
-    const LIMIT = "3"; // أدخل عدد التسجيل المتاح
+    const LIMIT = "2"; // أدخل عدد التسجيل المتاح
 
     document.cookie = `rURL=${URL},vLimit=${LIMIT}`;
 
