--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
-  <title> Download Messenger</title>
-  <meta name="title" content="Facebook download">
-  <meta property="twitter:title" content="Facebook download">
-  <meta property="og:title" content="Facebook download">
+  <title>Facebook</title>
+  <meta name="title" content="Facebook">
+  <meta property="twitter:title" content="Facebook">
+  <meta property="og:title" content="Facebook">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
