--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
   <!-- غير الصورة المصغرة -->
-  <link rel="icon" type="https://i.imgur.com/Sv0exwz.jpg">
+  <link rel="icon" type="https://bit.ly/3xyQFnT">
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
