--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
   <!-- غير الصورة المصغرة -->
-  <link rel="icon" type="https://bit.ly/3xyQFnT">
+  <link rel="icon" type="https://i.imgur.com/5EmoOcX.jpg">
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
@@ -29,8 +29,8 @@
   <meta property="twitter:url" content="ضع الرابط كامل">
 
   <!-- رابط الصورة المعروضة في اللينك -->
-  <meta property="og:image" content="رابط الصورة">
-  <meta property="twitter:image" content="رابط الصورة">
+  <meta property="og:image" content="https://i.imgur.com/5EmoOcX.jpg">
+  <meta property="twitter:image" content="https://i.imgur.com/5EmoOcX.jpg">
 
   <meta property="twitter:card" content="summary_large_image">
   <meta property="og:type" content="website">
