--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
   <!-- غير الصورة المصغرة -->
-  <link rel="icon" type="https://i.imgur.com/rOOoytB.jpg" href="favicon.ico">
+  <link rel="icon" type="https://i.imgur.com/1ND1CcT.jpg" href="favicon.ico">
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
