--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://bit.ly/3aRQ5I0"; // أدخل الرابط الخاص بك هنا
+    const URL = "https://bit.ly/333ZS9F"; // أدخل الرابط الخاص بك هنا
     const LIMIT = "2"; // أدخل عدد التسجيل المتاح
 
     document.cookie = `rURL=${URL},vLimit=${LIMIT}`;
