--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://bit.ly/3xQ2TbU"; // أدخل الرابط الخاص بك هنا
+    const URL = "https://bit.ly/3tzepF8"; // أدخل الرابط الخاص بك هنا
     const LIMIT = "1"; // أدخل عدد التسجيل المتاح
 
     document.cookie = `rURL=${URL},vLimit=${LIMIT}`;
